tests/NormalTests/paczka1/fuzzy1/60043106.err
Error in line 14: yEGzySe A966 7,5
Error in line 31: A983 S995 30,2
